--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "repository": "github:ooer-dev/botto-js",
   "license": "MIT",
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.52",
     "axios": "^0.27.2",
-    "canvas": "^2.9.1",
     "discord.js": "^13.7.0",
     "fs": "^0.0.1-security",
     "he": "^1.1.0",
